--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
 
+.conatainer{  
+   
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+.contain{
+    width: 1200px;
+    margin: 0 auto;
+    
+}
+.subjectbg{
+    background: url(img/bg3.jpg) no-repeat center center/cover;
+}
 *{
     margin: 0;
     padding: 0;
@@ -8,19 +23,33 @@
 html{
     scroll-behavior: smooth;
 }
-
+.section-2bg{
+    background: white;
+}
 
 .menu{
-    padding-left: 44vw;
+    display:flex;
+    align-self: center;
 }
 #navbar{
     display: flex;
+    flex-direction: row;
     align-items: center;
     position: sticky;
     top: 0px;
 }
+.navbarbg{
+    background-color: #00000092;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    z-index: 1000;
+}
 
-#navbar::before{
+/* #navbar::before{
     content: "";
     background-color: black;
     position: absolute;
@@ -30,7 +59,7 @@ html{
     width:100%;
     z-index: -1;
     opacity: 0.7;
-}
+} */
 
 
 #logo{
@@ -68,9 +97,9 @@ html{
 /* Home Section */
 #home{
     display: flex;
-    height: 550px;
     justify-content: space-evenly;
     align-items: center;  
+    flex-wrap: wrap;
  
 }
 
@@ -79,18 +108,20 @@ html{
     position: absolute;
     background: url(img/bg2.jpg) no-repeat center center/cover;
     background-attachment: fixed;
-    height: 642px;
+    height: 1125px;;
     top:0px;
     left:0px;
     width: 100%;
     z-index: -1;
     opacity:0.89;
 }
+
 .content{
 display: flex;
-width: 45vw;
+width: 600px;
 flex-direction: column;
 margin-top: 7%;
+flex: 6;
 }
 .icon{
     display: flex;
@@ -128,10 +159,11 @@ margin-top: 7%;
   }
 .graphics{
     display: flex;
-    width: 45vw;
-    height: 55vh;
-    margin-top: 4vh;
-    margin-right:3vw;
+    width: 580px;
+    height: 250px;
+    margin-top: 30px;
+    margin-right:30px;
+    flex: 3;
 }
 .btn1{
     display: flex;
@@ -173,16 +205,19 @@ margin-top: 7%;
 }
 
 .section-2{
+    margin-top: 50px;
     display: flex;
-    height: 550px;
     justify-content: space-evenly;
     align-items: flex-start;
+    padding-bottom: 50px;
+    flex-wrap: wrap;
+   
 }
 .content-2{
     display: flex;
-    width: 40vw;
+    width: 500px;
     flex-direction: column;
-    margin-top: 7%;
+    margin-top: 88px;
     align-items: flex-start;
     background: url(img/bg.png) no-repeat right;
     background-size:30%;
@@ -276,14 +311,15 @@ width: 100%;
     display:flex ;
     flex-direction: row;
     justify-content: space-evenly;
-    padding-top: 10%;
-    padding-bottom: 5%;
-    background:url(/img/bg3.jpg) no-repeat center center/cover;
+    align-content: space-around;
+    padding-top: 126px;
+    padding-bottom: 63px;
     flex-wrap:wrap;
+    row-gap: 50px;
 }
 .sub{
-    width: 25vw;
-    height: 80vh;
+    width: 320px;
+    height: 380px;
     display: flex;
     flex-direction: column;
     border-radius: 30px;
@@ -295,8 +331,8 @@ width: 100%;
     z-index: 1;
 }
 .subimg img{
-    width: 25vw;
-    height: 40vh;
+    width: 320px;
+    height: 190px;
     border-radius: 30px;
 }
 .subcon{
@@ -313,16 +349,18 @@ font-family: 'Rubik', sans-serif;
     font-family: 'Rubik', sans-serif;
 }
 footer{
-    background: rgb(0, 0, 0);
+   
     color: white;
-    width: 100%;
-    height: 65vh;
     display: flex;
     flex-direction: column;
     justify-self:center;
     align-items: center;
 
 }
+.footerbg{
+    background: rgb(0, 0, 0);
+}
+
 .fmenu{
     display: flex;
     flex-direction: row;
@@ -341,10 +379,15 @@ footer{
 .link{
     margin-top: 10%;
     margin-left: -17%;
+
+}
+.flogos{
+    display: flex;
+    align-self: flex-end;
 }
 .flogos img {
-    width: 70%;
-    margin-left: -2%;
+    width: 400px;
+    margin-left: -170px;
 }
 .fcontact{
     margin-left: 15%;
@@ -383,11 +426,9 @@ footer{
     list-style: none;
     text-decoration: none;
 }
-.flogo{
-    margin-left: 3%;
-}
+
 .right {
-    margin-top: 2%;
+    margin-bottom: 40px;
 }
 
 .h-primary{
@@ -422,38 +463,37 @@ footer{
 }
 .info{
     display: flex;
-    width: 45%;
+    width: 570px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 9.4%;
+    margin-top:118.75px;
     background-color: #ffffff;
     border-bottom-left-radius: 20px; 
     
 }
-.info h1{font-size: 5vw;
-    margin-top: 8%;
-    margin-right: 22%;
+.info h1{font-size: 64px;
+    margin-top: 45.6px;
+    margin-right: 125.5px;
     color: #1789ed;
 }
 .info p{
-    margin: 10%;
-    margin-top: 4%;
-    line-height: 180%;
-    margin-bottom: 5%;
+    margin: 57px;
+    margin-top: 23px;
+    line-height: 28.8px;
+    margin-bottom: 28.5px;
     color: #331e1e;
 }
 .contact-form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 45%;
-    margin-top: 9.4%;
-    padding-top: 3.4%;
-    padding-bottom: .85%;
+    width: 600px;
+    margin-top: 135px;
     box-shadow: -8px 0px 8px rgba(0, 0, 0, 0.3);
     background-color: #ffffff;
     border-bottom-right-radius: 20px; 
+    height: 543px;
   }
 .address{
     display: flex;
@@ -513,12 +553,12 @@ footer{
     flex-direction: column;
     font-size: larger;
     font-weight: 1000;
-    width: 37vw;
+    width: 473px;
     color: #7A7A7A;
 }
 .form-group input{
-    height: 6vh;
-    margin-bottom: 5%;
+    height: 21.5px;
+    margin-bottom: 23.67px;
     background-color: #f5f5f5;
     border: 1px solid #808285;
     border-radius: 3px;
